// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<div
  className="sc-iRaSfU dASPpV"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <label
    className="sc-gqUUDT kiGojW"
    size="small"
  >
    <input
      checked={true}
      className="sc-llyFOc fNxKzZ"
      id="test-switch-1"
      onChange={[Function]}
      size="small"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-hoIcGJ dqSQgy"
      size="small"
    />
  </label>
</div>
`;

exports[`Switch renders Buttons 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT etilyz"
      size="medium"
    >
      <input
        checked={true}
        className="sc-llyFOc fNxKzZ"
        id="button-switch-1"
        onChange={[Function]}
        size="medium"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-hoIcGJ fHIkkx"
        size="medium"
      >
        <span
          className="sc-dOAxzV boWUFJ"
        >
          <p
            className="sc-cQIpJi llFRTU"
            size={14}
          >
            Off
          </p>
          <p
            className="sc-cQIpJi llFRTU"
            size={14}
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT juXimc"
      size="large"
    >
      <input
        checked={true}
        className="sc-llyFOc fNxKzZ"
        id="button-switch-2"
        onChange={[Function]}
        size="large"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-hoIcGJ fHIkkx"
        size="large"
      >
        <span
          className="sc-dOAxzV boWUFJ"
        >
          <p
            className="sc-cQIpJi llFRTU"
            size={14}
          >
            Off
          </p>
          <p
            className="sc-cQIpJi llFRTU"
            size={14}
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`Switch renders DisabledTW state 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT ePYOFf"
      disabled={true}
      size="small"
    >
      <input
        checked={true}
        className="sc-llyFOc fNxKzZ"
        id="test-switch-disabled-checked"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-hoIcGJ dqSQgy"
        size="small"
      />
    </label>
  </div>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT ePYOFf"
      disabled={true}
      size="small"
    >
      <input
        checked={false}
        className="sc-llyFOc fNxKzZ"
        id="test-switch-disabled"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={false}
        className="sc-hoIcGJ kMeKDm"
        size="small"
      />
    </label>
  </div>
</div>
`;

exports[`Switch renders Theme variant 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT jLXksI"
      size="twoxsmall"
    >
      <input
        checked={true}
        className="sc-llyFOc cgfpdg"
        id="test-switch-1"
        onChange={[Function]}
        size="twoxsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-hoIcGJ evhhMC"
        size="twoxsmall"
      />
    </label>
  </div>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT fNMaSn"
      size="xsmall"
    >
      <input
        checked={true}
        className="sc-llyFOc gxTERg"
        id="test-switch-2"
        onChange={[Function]}
        size="xsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-hoIcGJ ifgHMZ"
        size="xsmall"
      />
    </label>
  </div>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT kiGojW"
      size="small"
    >
      <input
        checked={true}
        className="sc-llyFOc gxTERg"
        id="test-switch-3"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-hoIcGJ eNbtLm"
        size="small"
      />
    </label>
  </div>
</div>
`;

exports[`Switch renders different Sizes 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT jLXksI"
      size="twoxsmall"
    >
      <input
        checked={true}
        className="sc-llyFOc cuXITZ"
        id="test-switch-1"
        onChange={[Function]}
        size="twoxsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-hoIcGJ eaBkau"
        size="twoxsmall"
      />
    </label>
  </div>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT fNMaSn"
      size="xsmall"
    >
      <input
        checked={true}
        className="sc-llyFOc fNxKzZ"
        id="test-switch-2"
        onChange={[Function]}
        size="xsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-hoIcGJ hAEBst"
        size="xsmall"
      />
    </label>
  </div>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT kiGojW"
      size="small"
    >
      <input
        checked={true}
        className="sc-llyFOc fNxKzZ"
        id="test-switch-3"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-hoIcGJ dqSQgy"
        size="small"
      />
    </label>
  </div>
</div>
`;
